<resources>
    <string name="app_name">信易联</string>
    <string name="close">关闭</string>
    <string name="password_login">密码登录</string>
    <string name="tel_login">手机号登录</string>
    <string name="input_login_password">请输入登录密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="input_pic_verfic_code">请输入图形验证码</string>
    <string name="immediately_login">立即登录</string>
    <string name="new_register">新用户注册</string>
    <string name="service_tel">客服电话：400-4507-800</string>
    <string name="input_tel">请输入手机号码</string>
    <string name="get_verfic_code">获取验证码</string>
    <string name="input_verfic_code">请输入验证码</string>
    <string name="input_invitecode">请输入邀请码</string>
    <string name="input_sms_verfic_code">请输入短信验证码</string>
    <string name="input_password">请输入8-14位数字和字母组合的密码</string>
    <string name="input_password_again">请再次输入登录密码</string>
    <string name="read_and_agree">我已阅读并同意</string>
    <string name="agreement">《用户使用协议》</string>
    <string name="register">注册</string>
    <string name="no_invitecode">没有邀请码？</string>
    <string name="click_get_invitecode">请点击这里</string>
    <string name="set_gesture">设置手势密码</string>
    <string name="firstpage">首页</string>
    <string name="treasure">财富</string>
    <string name="share">分享</string>
    <string name="mine">我的</string>
    <string name="scan">扫一扫</string>
    <string name="gather">收款</string>
    <string name="creditcard">信用卡</string>
    <string name="shop">店铺</string>
    <string name="recommend_card">推荐办卡</string>
    <string name="group_buy">拼团购</string>
    <string name="merchant_policy">商家政策</string>
    <string name="collection_bill">收款账单</string>
    <string name="service_center">客服中心</string>
    <string name="integral_shop">积分商城</string>
    <string name="vip_center">商家VIP中心</string>
    <string name="vip_center_hint">-费率低至0.45%-</string>
    <string name="my_shop">我的店铺</string>
    <string name="guide">新手指引</string>
    <string name="shop_discount">商城优惠券</string>
    <string name="life_service">生活服务</string>
    <string name="water">水费</string>
    <string name="ele">电费</string>
    <string name="gas">燃气费</string>
    <string name="egs">e高速</string>
    <string name="information_query">信息查询</string>
    <string name="shebao_query">社保查询</string>
    <string name="gongjijin_query">公积金查询</string>
    <string name="express_query">快递查询</string>
    <string name="company_query">公司查询</string>
    <string name="count_down">秒后重新获取</string>
    <string name="reset_get_verifi_code">重新获取验证码</string>
    <string name="gather_record">收款记录</string>
    <string name="use_app_scan">使用APP扫一扫，向我付钱</string>
    <string name="set_money">设置金额</string>
    <string name="save_qrcode">保存二维码</string>
    <string name="sure">确定</string>
    <string name="input_gather_money">请输入收款金额</string>
    <string name="money">金额</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_information">Information</string>
    <string name="title_activity_scan_camera">ScanCamera</string>
    <string name="title_activity_show_result">ShowResult</string>
    <string name="unit_price">单 价:</string>
    <string name="pay">支 付</string>
    <string name="Product_Name">商品名称:</string>
    <string name="External_Call">外部调用</string>
    <string name="hint_editText">点击输入卡号</string>
    <string name="exit">再按一次退出</string>
    <string name="toast_momery">建议内存1GB,否则将影响使用体验</string>
    <string name="toast_flash">当前设备不支持闪光灯</string>
    <string name="toast_camera">无法启用相机</string>
    <string name="only">您还可以免费使用</string>
    <string name="time">次</string>
    <string name="free">次</string>
    <string name="times">次</string>
    <string name="andy_words">将银行卡置于此区域，并对齐扫描框边缘</string>
    <string name="bankcard_username">持卡人姓名</string>
    <string name="idcard">身份证号</string>
    <string name="add_bankcard_hint">请务必确认信息准确无误，否则将影响到账</string>
    <string name="bankcard_cardnumber">银行卡卡号</string>
    <string name="input_bankcard_cardnumber">请输入银行卡卡号</string>
    <string name="input_cardnumber">卡号</string>
    <string name="bankcard_tel">预留手机号</string>
    <string name="input_add_bankcard_tel">请输入银行预留手机号</string>
    <string name="makesure_bindcard">确认绑卡</string>
    <string name="next_setp">下一步</string>
    <string name="warm_prompt">温馨提示</string>
    <string name="please_go_realname">请先完成实名认证</string>
    <string name="cancel">取消</string>
    <string name="go_realname">去实名</string>
    <string name="real_name">真实姓名</string>
    <string name="idcard_life">身份证有效期</string>
    <string name="idcard_address">身份证地址</string>
    <string name="depositcard_number">储蓄卡号</string>
    <string name="input_depositcard_number">请输入储蓄卡号</string>
    <string name="tel">手机号</string>
    <string name="input_bancard_tel">请输入银行预留手机号</string>
    <string name="verfic_code">验证码</string>
    <string name="notice">注意事项：</string>
    <string name="notice_content">请本人亲自完成，将脸部与证件置于屏幕内，以便更加清晰。</string>
    <string name="front_tel">正对手机</string>
    <string name="light_fill">光线充足</string>
    <string name="clarity">清晰度高</string>
    <string name="commit">提交</string>
    <string name="next">下一步</string>
    <string name="complete">完成</string>
    <string name="up_business">上传营业场所照</string>
    <string name="up_doc">上传门头照</string>
    <string name="up_business_pic">上传营业执照</string>
    <string name="shopname">店铺名称</string>
    <string name="input_shopname">请输入店铺名称</string>
    <string name="shopaddress">店铺地址</string>
    <string name="select_shopaddress">请选择店铺地址：省/市/区</string>
    <string name="accountNumber">结算卡号</string>
    <string name="banktype">发卡行</string>
    <string name="select_banktype">请选择发卡行</string>
    <string name="open_success">开通成功</string>
    <string name="pay_bill">付款账单</string>
    <string name="my_package">我的卡包</string>
    <string name="system_notice">系统公告</string>
    <string name="my_team">我的团队</string>
    <string name="save_set">安全设置</string>
    <string name="head_portrait">头像</string>
    <string name="name">姓名</string>
    <string name="level">等级</string>
    <string name="realname">实名认证</string>
    <string name="open_merchant">商户权益</string>
    <string name="service_provide">服务商</string>
    <string name="login_password">修改登录密码</string>
    <string name="pay_password">支付密码</string>
    <string name="gesture_password">手势密码</string>
    <string name="exit_login">退出登录</string>
    <string name="sure_exit_login">确定退出登录？</string>
    <string name="change_gesture_password">修改手势密码</string>
    <string name="new_gesture">新手势密码</string>
    <string name="change_phone_hint">检测到您更换手机设备登录，请使用手机号登录验证。</string>
    <string name="input_password_login">输入账号密码登录</string>
    <string name="forget_gesture_password">忘记手势密码？</string>
    <string name="slide_gesture_password_login">滑动手势密码登录</string>
    <string name="buy_vip_content">一年期超值VIP特权，立享超低费率，只需99元！</string>
    <string name="buy_vip_discounts">现在购买更享双重优惠，提现手续费立减1元</string>
    <string name="immediately_buy">立即购买</string>
    <string name="bankname">银行名称</string>
    <string name="normal_rate">普通费率</string>
    <string name="vip_rate">VIP费率</string>
    <string name="base_info">基本信息</string>
    <string name="merchant_authority">商户权限</string>
    <string name="user_name">用户姓名</string>
    <string name="shop_info">店铺信息</string>
    <string name="shop_info_hint">店铺信息，一目了然</string>
    <string name="settle_info">结算信息</string>
    <string name="settle_info_hint">修改结算信息更方便</string>
    <string name="gather_bill">收款账单</string>
    <string name="gather_bill_hint">收款信息，查看更便捷</string>
    <string name="gather_rate">收款费率</string>
    <string name="gathre_rate_hint">实时查看费率，安全准确</string>
    <string name="settle_cardnumber">结算卡号</string>
    <string name="bank_tel">预留手机号</string>
    <string name="bank_name">发卡行</string>
    <string name="change_settle_card">修改结算卡</string>
    <string name="change_finsh">修改完成</string>
    <string name="select_query_date">请选择查询日期：</string>
    <string name="bill_info">账单信息</string>
    <string name="date">时间</string>
    <string name="order">订单号</string>
    <string name="pay_cardnumber">付款卡号</string>
    <string name="pay_people">付款人</string>
    <string name="gather_money">收款金额</string>
    <string name="deal_fee">交易手续费</string>
    <string name="extract_fee">提现手续费</string>
    <string name="real_money">到账金额</string>
    <string name="deal_state">交易状态</string>
    <string name="settle_state">结算状态</string>
    <string name="item_order">订单号：</string>
    <string name="item_date">时间：</string>
    <string name="item_deal_fee">交易手续费：</string>
    <string name="item_extract_fee">提现手续费：</string>
    <string name="item_gather_money">收款金额：</string>
    <string name="item_real_money">到账金额：</string>
    <string name="look_details">查看详情</string>
    <string name="line_split">-</string>
    <string name="date_hint">年-月-日</string>
    <string name="gather_merchant">收款商户</string>
    <string name="item_pay_money">付款金额：</string>
    <string name="item_gather_merchant">收款商户：</string>
    <string name="input_pay_money">请输入付款金额</string>
    <string name="pay_money">付款金额</string>
    <string name="merchant">商户名</string>
    <string name="current_level">当前商户等级</string>
    <string name="vip_date">VIP有效期</string>
    <string name="my_extract_fee">我的提现手续费</string>
    <string name="my_gather_fee">我的收款手续费</string>
    <string name="fee">费率</string>
    <string name="uplevel">去升级</string>
    <string name="upvip_date">升级VIP时间</string>
    <string name="my_service">我的客服</string>
    <string name="input_new_pay_password">请输入新支付密码</string>
    <string name="change_pay_password">修改支付密码</string>
    <string name="forget_pay_password">忘记支付密码</string>
    <string name="take_picture">拍照</string>
    <string name="get_phone">从手机相册选择</string>
    <string name="face_to_face">面对面二维码推广</string>
    <string name="share_register">分享注册</string>
    <string name="official_generalize">文案推广</string>
    <string name="longclick_qrcode">长按识别或保存二维码</string>
    <string name="share_qrcode">分享二维码</string>
    <string name="wechat">微信</string>
    <string name="moment">朋友圈</string>
    <string name="qq">QQ</string>
    <string name="qzone">QQ空间</string>
    <string name="can_extract">可提收入（元）</string>
    <string name="apply_extract">申请提现</string>
    <string name="all_earning">累计收入(元)</string>
    <string name="all_extract">累计提现(元)</string>
    <string name="deal_brokerage">交易佣金(元)</string>
    <string name="up_vip_brokerage">升级VIP奖励(元)</string>
    <string name="can_extract_brokerage">可提现佣金</string>
    <string name="extract_cardnumber">提现卡号</string>
    <string name="extract_money">提现金额\t\t</string>
    <string name="input_extract_money">请输入提现金额</string>
    <string name="extract_hint">提示：满10元可提，每笔收取2元手续费</string>
    <string name="makesure_extract">确认提现</string>
    <string name="order_">订单号：</string>
    <string name="extract_money_">提现金额：</string>
    <string name="fee_">手续费：</string>
    <string name="deal_date_">交易时间：</string>
    <string name="real_money_">实到金额：</string>
    <string name="account_number_">结算卡号：</string>
    <string name="fail_reason_">失败原因：</string>
    <string name="benefit_type_">分润类型：</string>
    <string name="benefit_date_">分润时间：</string>
    <string name="benefit_money_">分润金额：</string>
    <string name="benefit_people_">客户：</string>
    <string name="select_share_type">请选择分享平台</string>
    <string name="recommend_number">推荐人数</string>
    <string name="my_team_hint">我推荐的人</string>
    <string name="my_team_">我的团队(人)</string>
    <string name="realname_info_name">真实姓名：</string>
    <string name="realname_info_idcard">身份证号：</string>
    <string name="realname_info_cardnumber">储蓄卡号：</string>
    <string name="realname_info_tel">预留手机：</string>
    <string name="compel_login">检测到您更换设备，请使用手机号重新登录！</string>
    <string name="regist_success">注册成功！</string>
    <string name="card_package">卡包</string>
    <string name="digits_limit">1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
</resources>