<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/circle_white_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/x10"
        android:text="@string/warm_prompt"
        android:textColor="@color/blackColor"
        android:textSize="@dimen/s18"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:background="@color/grayColor_line_E5"/>

    <TextView
        android:id="@+id/tv_pop_realname_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteColor"
        android:gravity="center"
        android:paddingTop="@dimen/y20"
        android:paddingBottom="@dimen/y20"
        android:text="@string/please_go_realname"
        android:textColor="@color/grayColor_9"
        android:textSize="@dimen/s16"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/y10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_pop_realname_cancel"
            android:text="@string/cancel"
            style="@style/btn_cancel_sure"/>

        <Button
            android:id="@+id/btn_pop_realname_sure"
            style="@style/btn_cancel_sure"
            android:text="@string/go_realname"/>
    </LinearLayout>
</LinearLayout>