<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/actionbar_layout"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x20"
        android:layout_marginTop="@dimen/y20"
        android:layout_marginEnd="@dimen/x20">

        <EditText
            android:id="@+id/et_login_password_new_password"
            style="@style/et_common"
            android:hint="@string/input_password"
            android:digits="@string/digits_limit"
            android:maxLength="14"
            tools:ignore="Autofill,TextFields"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x20"
        android:layout_marginTop="@dimen/y10"
        android:layout_marginEnd="@dimen/x20">

        <EditText
            android:id="@+id/et_login_password_new_password_again"
            style="@style/et_common"
            android:hint="@string/input_password_again"
            android:digits="@string/digits_limit"
            android:maxLength="14"
            tools:ignore="Autofill,TextFields"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login_password_finsh"
        style="@style/btn_common"
        android:layout_margin="@dimen/x50"
        android:text="@string/complete"/>
</LinearLayout>